--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,11 @@
-<p>hello world!!</p>
+<ul class="btns">
+  <li class="btn active">ボタン１</li>
+  <li class="btn">ボタン２</li>
+  <li class="btn">ボタン３</li>
+</ul>
+
+<div class="box">
+  <div class="box_square red">
+  </div>
+  <div class="swich">swich</div>
+</div>
