--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,54 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Hello</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+  <title>Hello</title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.6/css/uikit.min.css" />
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.6/js/uikit.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.6/js/uikit-icons.min.js"></script>
+</head>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+<body>
+  <header class="header">
+    <ul class="header__top">
 
-  <body>
-    <%= yield %>
-  </body>
+      <%= link_to(posts_path) do %>
+      <li class="header__top__left">BELLBOARD</li>
+      <% end %>
+
+      <li class="header__top__list-first"><span uk-icon="icon: menu; ratio: 1.5"></span>
+        <ul class="header__top__list__child">
+          <%= link_to(new_post_path) do %>
+          <li class="header__top__list-first__child__item">マイページ</li>
+          <% end %>
+          <%= link_to(posts_path) do %>
+          <li class="header__top__list-first__child__item">試合結果</li>
+          <% end %>
+          <li class="header__top__list-first__child__item">試合予定</li>
+          <li class="header__top__list-first__child__item">投稿画像一覧</li>
+          <li class="header__top__list-first__child__item">ログアウト</li>
+        </ul>
+      </li>
+
+      <li class="header__top__list-second uk-float-right"><span class="header__top__list-second__icon uk-badge">0</span>
+        <span uk-drop="boundary: .header__top__list;delay-show: 500; delay-hide: 200">
+          <div class="uk-card-small uk-card-default uk-card-body">未読通知０件</div>
+        </span>
+      </li>
+
+      <%= link_to(new_post_path) do %>
+      <li class="header__top__list">投稿する</li>
+      <% end %>
+
+    </ul>
+  </header>
+  <%= yield %>
+
+</body>
 </html>
