--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,111 @@
-<ul class="btns">
-  <li class="btn active">ボタン１</li>
-  <li class="btn">ボタン２</li>
-  <li class="btn">ボタン３</li>
-</ul>
+<div class="post-index-main">
+  <div class="post-index-grid">
 
-<div class="box">
-  <div class="box_square red">
+    <div class="post-index-main__body uk-card-small uk-card-default">
+      <div class="uk-card-body">
+        <p>毎週火曜日２０：３０～Ｊ：ＣＯＭチャンネルにてお届けしております『みんなのベルマーレ』明日のスタジオゲストが2016ベルマーレクイーン千田絵民(せんだ えみ)菊田彩乃(きくた あやの)さんに決定いたしました！明日も公開生放送！ぜひぜひスタジオにも遊びにいらしてくださいませ！</p>
+      </div>
+      <div class="post-index-main__body__footer uk-card-footer">
+        <span class="post-index-main__body__footer__name">by bellmare</span>
+        <span class="post-index-main__body__footer__date">2019/07/01 13:00</span>
+        <span class="post-index-main__body__footer__icon" uk-icon="icon: comment"></span>
+        <span class="post-index-main__body__footer__icon-count">0</span>
+        <span class="post-index-main__body__footer__icon-heart" uk-icon="icon: heart"></span>
+        <span class="post-index-main__body__footer__icon-count">0</span>
+        <span class="post-index-main__body__footer__icon">コメントする</span>
+      </div>
+    </div>
+
+    <div class="post-index-main__body uk-card-small uk-card-default">
+      <div class="uk-card-body">
+        <p>まだ馬入にいます。 昨日U-15クラ選、関東から出場する14チームの最後の枠を東急レイエスと争い獲得した FC LAVIDAですが、同じく全国を決めているベルマーレU15と馬入で練習試合のようです。 昨日は前橋、今日は平塚、 中学生はタフですね</p>
+      </div>
+      <div class="post-index-main__body__footer uk-card-footer">
+        <span class="post-index-main__body__footer__name">by bellmare</span>
+        <span class="post-index-main__body__footer__date">2019/07/01 13:00</span>
+        <span class="post-index-main__body__footer__icon" uk-icon="icon: comment"></span>
+        <span class="post-index-main__body__footer__icon-count">0</span>
+        <span class="post-index-main__body__footer__icon-heart" uk-icon="icon: heart"></span>
+        <span class="post-index-main__body__footer__icon-count">0</span>
+        <span class="post-index-main__body__footer__icon">コメントする</span>
+      </div>
+    </div>
+
+    <div class="post-index-main__body uk-card-small uk-card-default">
+      <div class="uk-card-body">
+        <p>ベルマーレ必勝祈願に熱田神宮！</p>
+      </div>
+      <div class="post-index-main__body__footer uk-card-footer">
+        <span class="post-index-main__body__footer__name">by bellmare</span>
+        <span class="post-index-main__body__footer__date">2019/07/01 13:00</span>
+        <span class="post-index-main__body__footer__icon" uk-icon="icon: comment"></span>
+        <span class="post-index-main__body__footer__icon-count">0</span>
+        <span class="post-index-main__body__footer__icon-heart" uk-icon="icon: heart"></span>
+        <span class="post-index-main__body__footer__icon-count">0</span>
+        <span class="post-index-main__body__footer__icon">コメントする</span>
+      </div>
+    </div>
+
+    <div class="post-index-main__body uk-card-small uk-card-default">
+      <div class="uk-card-body">
+        <p>Fリーグ 第8節 vs 湘南ベルマーレ 2-5 ● 2連敗。 下を向いている場合ではない。 次節もホームゲーム。 勝ってみんなで笑えるように。 今日も応援ありがとうございました！</p>
+      </div>
+      <div class="post-index-main__body__footer uk-card-footer">
+        <span class="post-index-main__body__footer__name">by bellmare</span>
+        <span class="post-index-main__body__footer__date">2019/07/01 13:00</span>
+        <span class="post-index-main__body__footer__icon" uk-icon="icon: comment"></span>
+        <span class="post-index-main__body__footer__icon-count">0</span>
+        <span class="post-index-main__body__footer__icon-heart" uk-icon="icon: heart"></span>
+        <span class="post-index-main__body__footer__icon-count">0</span>
+        <span class="post-index-main__body__footer__icon">コメントする</span>
+      </div>
+    </div>
+
+    <div class="post-index-main__body uk-card-small uk-card-default">
+      <div class="uk-card-body">
+        <p>内容悪い試合続いても急に原点に戻ったような試合をする。どんなに悔しい思いをしても現地観戦やめられない。たちの悪いチームにはまってしまったものだ</p>
+      </div>
+      <div class="post-index-main__body__footer uk-card-footer">
+        <span class="post-index-main__body__footer__name">by bellmare</span>
+        <span class="post-index-main__body__footer__date">2019/07/01 13:00</span>
+        <span class="post-index-main__body__footer__icon" uk-icon="icon: comment"></span>
+        <span class="post-index-main__body__footer__icon-count">0</span>
+        <span class="post-index-main__body__footer__icon-heart" uk-icon="icon: heart"></span>
+        <span class="post-index-main__body__footer__icon-count">0</span>
+        <span class="post-index-main__body__footer__icon">コメントする</span>
+      </div>
+    </div>
+
+    <div class="post-index-main__body uk-card-small uk-card-default">
+      <div class="uk-card-body">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+      </div>
+      <div class="post-index-main__body__footer uk-card-footer">
+        <span class="post-index-main__body__footer__name">by bellmare</span>
+        <span class="post-index-main__body__footer__date">2019/07/01 13:00</span>
+        <span class="post-index-main__body__footer__icon" uk-icon="icon: comment"></span>
+        <span class="post-index-main__body__footer__icon-count">0</span>
+        <span class="post-index-main__body__footer__icon-heart" uk-icon="icon: heart"></span>
+        <span class="post-index-main__body__footer__icon-count">0</span>
+        <span class="post-index-main__body__footer__icon">コメントする</span>
+      </div>
+    </div>
+
   </div>
-  <div class="swich">swich</div>
+  <div class="post-side-grid">
+        <div class="post-index-main__body uk-card-small uk-card-default">
+      <div class="uk-card-body">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+      </div>
+      <div class="post-index-main__body__footer uk-card-footer">
+        <span class="post-index-main__body__footer__name">by bellmare</span>
+        <span class="post-index-main__body__footer__date">2019/07/01 13:00</span>
+        <span class="post-index-main__body__footer__icon" uk-icon="icon: comment"></span>
+        <span class="post-index-main__body__footer__icon-count">0</span>
+        <span class="post-index-main__body__footer__icon-heart" uk-icon="icon: heart"></span>
+        <span class="post-index-main__body__footer__icon-count">0</span>
+        <span class="post-index-main__body__footer__icon">コメントする</span>
+      </div>
+    </div>
+  </div>
 </div>
